# axum-paddle-notifications

./: .gitignore  Cargo.toml  Makefile  README.md
crates/lib/aws_client/: Cargo.toml
crates/lib/aws_client/src/: lib.rs  sqs_client.rs
crates/lib/axum_helper/: Cargo.toml
crates/lib/axum_helper/src/: lib.rs
