[workspace]
resolver = "2"
members = [
  "crates/bin/paddle_notifications_logger",
  "crates/lib/aws_client",
  "crates/lib/axum_helper"
]

[profile.release]
# debug = true      # Enable debug symbols
# opt-level = 3     # Optimize for speed
# opt-level = 'z'   # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
opt-level = "z"  # Optimize for size.
