[package]
name = "aws_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
lambda_runtime = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
aws_lambda_events = "0.11.1"
futures = "0.3.28"
tracing = "0.1.37"

[lib]
path = "src/lib.rs"
doctest = false
